--- a/style/swipeout.scss
+++ b/style/swipeout.scss
@@ -40,12 +40,20 @@ $swipeout-action-icon-size: 2.25rem !default;
 // actions
 
 .swipeout__action {
-  display: table;
-  table-layout: fixed;
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+
+  padding: 0 0.5em;
+  margin: 0;
+  border: 0;
 
   width: $swipeout-action-width;
   height: 100%;
 
+  font-family: inherit;
   font-size: $swipeout-action-font-size;
   font-weight: 500;
   line-height: 1.2;
@@ -54,27 +62,10 @@ $swipeout-action-icon-size: 2.25rem !default;
   background: $swipeout-action-background;
 
   text-align: center;
-  word-wrap: break-word;
-}
-
-.swipeout__button {
-  display: table-cell;
-  box-sizing: border-box;
-
-  padding: 0;
-  margin: 0;
-  border: 0;
-
-  width: 100%;
-  height: 100%;
-
-  font-family: inherit;
-  font-weight: inherit;
-  color: inherit;
-  background: inherit;
-
   text-decoration: none;
-  vertical-align: middle;
+
+  word-wrap: break-word;
+
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
 
